Bug 424194 - krunner is represented by a generic icon in Shortcuts kcm
Summary: krunner is represented by a generic icon in Shortcuts kcm
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-14 13:10 UTC by Patrick Silva
Modified: 2020-08-01 11:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (101.03 KB, image/png)
2020-07-14 13:10 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-07-14 13:10:01 UTC
Created attachment 130113 [details]
screenshot

STEPS TO REPRODUCE
1. open Shortcuts kcm and observe the icon of krunner system service
2. 
3. 

OBSERVED RESULT
as we can see in the attached screenshot, krunner system service is represented by a generic icon in Shortcuts kcm

EXPECTED RESULT
krunner system service should be represented by its own icon in Shortcuts kcm

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.73.0
Qt Version: 5.14.2
Comment 1 Bug Janitor Service 2020-07-15 15:26:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/67
Comment 2 David Redondo 2020-07-31 09:36:48 UTC
Git commit ad97508add4dd7608278270d154b0221d53e9059 by David Redondo.
Committed on 31/07/2020 at 09:36.
Pushed by davidre into branch 'master'.

Hardcode icons for default plasma components

Unfortunately are components free to choose their unique component name any way
they like, that means we have no chance to reasonably map a KService/icon to a
component if its identifier is chosen badly. For presentation purposes we can
at least hardcode some icons for components that are active in a default plasma
session.
Related: bug 424197, bug 424198, bug 424195

M  +17   -1    kcms/keys/shortcutsmodel.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/ad97508add4dd7608278270d154b0221d53e9059
Comment 3 David Redondo 2020-07-31 09:38:05 UTC
Git commit 3b56b25d96fb94e0f5f31925eeddf8453fb63399 by David Redondo.
Committed on 31/07/2020 at 09:38.
Pushed by davidre into branch 'Plasma/5.19'.

Hardcode icons for default plasma components

Unfortunately are components free to choose their unique component name any way
they like, that means we have no chance to reasonably map a KService/icon to a
component if its identifier is chosen badly. For presentation purposes we can
at least hardcode some icons for components that are active in a default plasma
session.
Related: bug 424197, bug 424198, bug 424195


(cherry picked from commit ad97508add4dd7608278270d154b0221d53e9059)

M  +17   -1    kcms/keys/shortcutsmodel.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/3b56b25d96fb94e0f5f31925eeddf8453fb63399