Be a bit smarter when doing icon fallback

If the service ends with ".desktop" and we don't have an icon (unlikely but
the case with KRunner), remove the extension because icons don't have such names.
BUG:424194